Partially fixed home page nav alignment issue

--- a/_sass/_nav.sass
+++ b/_sass/_nav.sass
@@ -87,8 +87,3 @@
             -webkit-transform: scaleX(1)
             -ms-transform: scaleX(1)
             transform: scaleX(1)
-
-// A little extra margin to space out the logo and the nav links
-@media (min-width: 1200px)
-    .navbar-nav
-        margin-left: 1rem
